# egui-kle

./: Cargo.toml  Readme.md  flake.nix
examples/: crkbd.rs  simple.rs  split.rs
src/: color.rs  keybox.rs  keycode.rs  lib.rs
src/keyboard/: layout.rs  mod.rs  press_time.rs
