[package]
name = "egui_keyboard"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
egui = "0.24.1"
kle-serial = "0.3.0"
serde = { version = "1.0.193", optional = true, features = ["derive"] }

[dev-dependencies]
eframe = "0.24.1"
serde_json = "1.0.108"
